projects/project_dashboard/css/responsive.css
@media (max-width: 768px) {
	.main-toggle-container {
		display: none;
	}

	#mobile-menu-toggler {
		visibility: visible;
	}
	.status-bar {
		box-shadow: 1px -1px 3px 1px var(--red-dark);
		border: 1px 1px outset var(--black);
		border-radius: 8px;
	}

	.status-bar .container:first-child {
		display: none;
	}
	.status-bar .container:last-child {
		width: 200px;
		font-size: 0.8rem;
	}

	.main-display-container {
		height: 100%;
		row-gap: 30px;
		margin-top: 10px;
		padding: 5px 0;
		overflow: scroll;
	}

	.main-display-container .event-holder-container {
		height: 400px;
		width: 350px;
	}

	.event-holder-container .event-parent-container {
		justify-content: center;
	}

	.main-display-container .event-holder-container.holder-toggled {
		width: 100%;
		height: 100%;
		transition: width ease-in 0.2s;
	}
}

@media (max-width: 468px) {
	.status-bar {
		background-color: var(--black-darker);
		box-shadow: 1px -1px 3px 1px var(--red-dark);
		border: 1px 1px outset var(--black);
		border-radius: 8px;
	}

	.status-bar .container {
		font-size: 12px;
		text-align: center;
		place-content: center;
		place-items: center;
	}

	.completed-events-container.completed-active {
		width: 360px;
	}
}

